- remove the shell script using gawk, - remove the cron folder, - refactor the nodejs main.js to   - handle multiple sevices,   - have a background execution if the caller (prometheus) is calling with more than 2 minutes interval   - prepend if necessary the fastly metrics - add Docker config to create docker image embedding the main.js, - add docker-compose to have a dev environment with prometheus and grafana, - add sample prometheus and grafana config, - update the Makefile for the dpkg - update the README.md

--- a/service/fastly-real-time-api-to-prometheus.service
+++ b/service/fastly-real-time-api-to-prometheus.service
@@ -4,7 +4,7 @@ Documentation=https://github.com/edouardbe/fastly-real-time-api-to-prometheus
 
 [Service]
 Type=simple
-ExecStart=node /usr/local/lib/fastly-real-time-api-to-prometheus/nodejs/main.js --bash-script-location=/usr/local/lib/fastly-real-time-api-to-prometheus/fastly-real-time-api-to-prometheus.sh --configuration-file=/etc/fastly-real-time-api-to-prometheus/config.txt
+ExecStart=node /usr/local/lib/fastly-real-time-api-to-prometheus/nodejs/main.js --configuration-file=/etc/fastly-real-time-api-to-prometheus/config.txt
 
 [Install]
 WantedBy=multi-user.target
