--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@edouardbe/command-line-arguments-configuration-file-environment-variables-parser": "^0.0.4",
     "command-line-args": "^5.2.1",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "axios": "1.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
